# ipum_lab3_cd_ci

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  main.py  pyproject.toml  pytest.ini  settings.py
.github/workflows/: ci_cd_workflow.yaml  hello_world.yaml
src/app/: models.py
src/inference/: __init__.py  inference.py  load_onnx_model.py
src/scripts/: download_artifacts.py  export_model_to_onnx.py
tests/: test_settings.py
